# cppgit2

./: CMakeLists.txt
include/cppgit2/: diff.hpp  git_exception.hpp  pathspec.hpp  repository.hpp
src/: commit.cpp  diff.cpp  oid.cpp  pathspec.cpp  repository.cpp  strarray.cpp
